--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,6 +43,12 @@ a{
 .justify-content-center{
 	justify-content: center !important;
 }
+.hide{
+	display: none;
+}
+.show{
+	display: inline;
+}
 .card-background-light{
 	box-shadow: inset 0 0 40px var(--card-light-light-color);
 	color: var(--card-dark-dark-color) !important;
@@ -114,6 +120,7 @@ a{
 	width: 105px;
 	z-index: 5;
 	position: absolute;
+	margin-top: -35px;
 /* 	left: -2px;
 	top: 33px; */
 }
@@ -130,7 +137,8 @@ a{
 	background-color: black;
 }
 #scroll-to-top {
-	display: none; /* Hidden by default */
+	display: grid; /* Hidden by default */
+	opacity: 0;
 	position: fixed; /* Fixed/sticky position */
 	bottom: 10px; /* Place the button at the bottom of the page */
 	right: 5%; /* Place the button 30px from the right */
@@ -143,13 +151,13 @@ a{
 	border-radius: 10px; /* Rounded corners */
 	font-size: 1em; /* Increase font size */
 	background-color: #f8a67a;
-	transition: all .2s ease-in-out;
+	transition: all .3s ease-in-out;
 }
 #scroll-to-top > i{
 	margin-bottom: -5px !important;
 }
 #scroll-to-top:hover {
-	transform: scale(1.2);
+	/* transform: scale(1.2); */
 	margin-bottom: 20px;
 }   
 .contact-form{
@@ -197,13 +205,16 @@ __________
 
 */
 .roadmap{
-	padding: 0.5rem 1rem;
+	/* padding: 1rem 1rem 2rem; */
+	padding: 1rem 1rem 1rem 1rem;
 	background-color: white;
 	display: grid;
 	/* The columns will be used for wider displays */
 	/* grid-template-columns: repeat(5, 1fr); */
-	grid-template-rows: repeat(5, 1fr);
+	grid-auto-rows: 1fr;
 	text-align: center;
+	margin-top: -250px;
+	transition: margin 0.5s ease;
 }
 .destination{
 	display: grid;
@@ -259,6 +270,14 @@ __________
 	color: white !important;
 	text-shadow: 2px 1px 3px black;
 	box-shadow: 0px 0px 5px 1px var(--fourth-color);
+}
+#show-locator{
+	margin-top: 1rem;
+    color: var(--fourth-color);
+    font-weight: bold;
+}
+.show-locator-toggle{
+	margin-top: 0;
 }
 /* 
 __________
@@ -373,7 +392,7 @@ i{
 	border: none;
 	outline: none;
 	max-height: 40px;
-	color: var(--card-light-dark-color);
+	color: var(--second-color);
 }
 .main-nav > .logo-container-outer > img {
 	position: absolute;
