--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,6 +49,9 @@ a{
 .show{
 	display: inline;
 }
+#scroll-to-products{
+	cursor: pointer;
+}
 .card-background-light{
 	box-shadow: inset 0 0 40px var(--card-light-light-color);
 	color: var(--card-dark-dark-color) !important;
@@ -99,12 +102,12 @@ a{
     background-color: var(--third-color);
 	background-image: 
 	radial-gradient(
-		var(--card-dark-light-color) 17%,
-		transparent 25%
+		var(--card-dark-light-color) 25%,
+		transparent 20%
 	),
 	radial-gradient(
-		var(--card-dark-light-color) 17%,
-		transparent 25%
+		var(--card-dark-light-color) 25%,
+		transparent 20%
 	);
     background-size: 10px 17px;
     background-position: 0 12px,55px 32.5px;
@@ -284,7 +287,7 @@ __________
     font-weight: bold;
 }
 .show-locator-toggle{
-	margin-top: 0;
+	margin-top: 0 !important;
 }
 /* 
 __________
@@ -665,16 +668,27 @@ __________
 
 */
 
-/* @media (min-width: 576px) { ... }
+@media (min-width: 576px) { 
+	.roadmap {
+		margin-top: -245px;
+		font-size: 1.3rem;
+	}
+	.main-header>.nav-toggle {
+		margin-left: -65px;
+	}
+	.bg1 > div {
+		font-size: 1.7em;
+	}
+}
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { }
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {  }
 
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... } */
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
 
 /*
 __________
