--- a/src/css/main.css
+++ b/src/css/main.css
@@ -177,7 +177,9 @@ a{
 .footer .contact-information a:hover, .footer .footer-surplus a:hover{
 	color: black;
 }
-
+#scroll-home-btn{
+	display: none;
+}
 #scroll-to-top {
 	display: grid; /* Hidden by default */
 	opacity: 0;
@@ -797,6 +799,9 @@ __________
 }
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
+	#scroll-home-btn{
+		display: inline-block;
+	}
 	.parallax-wrapper{
 		width: auto;
 		margin-left: 250px;
@@ -809,7 +814,7 @@ __________
 		width: 250px;
 		transform: translateX(0);
 		font-size: 1.2em;
-		grid-template-rows: repeat(6, 1fr);
+		grid-auto-rows: auto;
 		border-right: 1px solid;
 		transition: all 0.2s ease;
 	}
@@ -822,7 +827,6 @@ __________
 		grid-auto-rows: 1fr;
 		grid-gap: 1rem;
 		justify-items: center;
-		margin-bottom: 20px !important;
 		text-transform: lowercase !important;
 	}
 	.nav-contact-info a{
