--- a/src/css/main.css
+++ b/src/css/main.css
@@ -177,8 +177,8 @@ a{
 .footer .contact-information a:hover, .footer .footer-surplus a:hover{
 	color: black;
 }
-#scroll-home-btn{
-	display: none;
+.scroll-home-btn{
+	display: none !important;
 }
 #scroll-to-top {
 	display: grid; /* Hidden by default */
@@ -726,6 +726,7 @@ __________
 	.logo-container-outer .nav-mobile-logo{
 		position: relative !important;
 		width: 50%;
+		max-width: 750px;
 	}
 	.main-nav {
 		font-size: 2.5em;
@@ -799,7 +800,7 @@ __________
 }
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-	#scroll-home-btn{
+	.scroll-home-btn{
 		display: inline-block;
 	}
 	.parallax-wrapper{
